versioned_docs/version-2026.1.1/professor/beatriz_de_souza_goncalves_proenca.mdx


---
sidebar_label: 'Beatriz de Souza Gonçalves Proença'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Beatriz de Souza Gonçalves Proença",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Bromatologia dos Alimentos - 2378",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Processamento e pós-colheita de produtos vegetais - 2380",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Tecnologia de carnes e derivados II - 2382",
          "size": 2,
          "teachers": [
            "Indefinido 1",
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia de massas e panifícios - 2383",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Processamento e pós-colheita de produtos vegetais - 2380",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia de bebidas - 2381",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Tecnologia de carnes e derivados II - 2382",
          "size": 1,
          "teachers": [
            "Indefinido 1",
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "a_definir",
          "students": [
            "TAL2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        },
        {
          "subject": "Tecnologia de massas e panifícios - 2383",
          "size": 1,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "a_definir",
          "students": [
            "TAL2025"
          ],
          "time": "21:50 - 22:40",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Bromatologia dos Alimentos - 2378",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Análise Sensorial - 2377",
          "size": 2,
          "teachers": [
            "Indefinido 1",
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Beatriz de Souza Gonçalves Proença

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

